// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component fromAgent colors the message white 1`] = `
<div
  className="messageContainer"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-start",
        "marginRight": "auto",
      }
    }
  >
    <div
      className="agentAvatar"
      style={Object {}}
    />
    <div
      className="Message"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    >
      <Linkify
        className="Linkify"
        component="a"
        properties={
          Object {
            "rel": "noopener noreferrer",
            "style": Object {
              "color": "#2199e8",
              "fontFamily": "sans-serif",
              "textDecoration": "underline",
            },
            "target": "_blank",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#000",
              "fontFamily": "sans-serif",
            }
          }
        >
          text--0
        </span>
      </Linkify>
    </div>
  </div>
</div>
`;

exports[`Message component rendering renders with default props 1`] = `
<div
  className="messageContainer fromCustomer"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
        "marginLeft": "auto",
      }
    }
  >
    <div
      className="Message fromCustomer"
      style={
        Object {
          "backgroundColor": "#333",
        }
      }
    >
      <Linkify
        className="Linkify"
        component="a"
        properties={
          Object {
            "rel": "noopener noreferrer",
            "style": Object {
              "color": "#fff",
              "fontFamily": "sans-serif",
              "textDecoration": "underline",
            },
            "target": "_blank",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#fff",
              "fontFamily": "sans-serif",
            }
          }
        >
          text--0
        </span>
      </Linkify>
    </div>
    <div
      className="customerAvatar"
      style={Object {}}
    />
  </div>
</div>
`;
